Changed section headings

--- a/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
+++ b/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
@@ -580,7 +580,7 @@
   \end{center}
 \end{frame}
 
-\section{Global fit}
+\section{Fit to data}
 \begin{frame}{Global fit}
   \begin{center}
     {\huge Global fit}
@@ -642,7 +642,6 @@
   \end{itemize}
 \end{frame}
 
-\section{Binned CP fit}
 \begin{frame}{Binned CP fit}
   \begin{center}
     {\huge Binned CP fit}
