Added next steps

--- a/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
+++ b/B2Dh_D2KKpipi_B2OC_Presentation_4th_November.tex
@@ -754,6 +754,14 @@
     \delta_B^{D\pi} &= (x.x^{+117}_{-63})^\circ, \\
     r_B^{D\pi} &= x.x^{+0.0052}_{-0.0024}.
   \end{align*}
+  \begin{itemize}
+    \item{Next steps:}
+    \begin{itemize}
+      \item{ANA note (more or less) ready}
+      \item{Calculate model uncertainty of $c_i$ and $s_i$}
+      \item{Other minor details}
+    \end{itemize}
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Bonus measurement}
